--- a/css/homePage.css
+++ b/css/homePage.css
@@ -5,55 +5,17 @@
     font-family: 'Microsoft JhengHei';
 }
 
-header {
+
+.page{
+    width: 900px;
+    height:800px;
+    margin: 56px auto 0px auto;
+}
+
+footer{
     width: 100%;
-    height: 60px;
-    border-bottom: 1px solid #ccc;
-}
-
-.header {
-    width: 800px;
-    height: 100%;
-    margin: auto;
-    display: flex;
-}
-
-.logo {
-    flex-basis: 150px;
-    background-color: pink;
-}
-
-.content {
-    width: 800px;
-    margin: auto;
-    display: flex;
-}
-
-.menu {
-    flex-basis: 120px;
-    height: 200px;
-    background-color: lightgreen;
-    padding: 5px;
-}
-nav{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-nav a{
-    
+    height: 100px;
     text-align: center;
-    text-decoration: none;
-    width: 90px;
-    margin-top: 10px;
-}
-.main{
-    flex-basis: 560px;
-    height: 800px;
-    background-color: lightgrey;
-}
-.user_list{
-    flex-basis: 120px;
-    height: 600px;
-    background-color: lightpink;
+    color:white;
+    background-color: black;
 }
