--- a/css/add_survey.css
+++ b/css/add_survey.css
@@ -7,20 +7,22 @@
     flex-wrap: wrap;
     align-content: flex-start;
 }
-.left{
-    width:200px;
+.top{
+    width:700px;
     height: 60px;
     border: 1px solid black;
-}
-.right{
-    width:500px;
-    height: 60px;
-    border: 1px solid black;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    display: flex;
+    align-items: center;
+    padding-left: 30px;
 }
 .content{
     width:700px;
     padding: 20px 50px;
     border: 1px solid black;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
 .ques{
     margin-bottom: 10px;
@@ -28,37 +30,27 @@
 .q_t{
     width:600px;
     height: 40px;
-    display: flex;
-    justify-content: center;
 }
 .q_t span{
     width: 300px;
     height: 30px;
 }
-.q_o{
+.o_box{
     width:600px;
     padding-top: 10px;
     padding-bottom: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: pink;
     border-radius: 20px;
 }
-.q_o div{
-    width: 400px;
-    padding-left: 70px;
-    padding-top: 1px;
-    padding-bottom: 1px;
+.o_box .opt{
+    width: 300px;
 }
-.q_add{
-    width:600px;
-    height: 45px;
-    border-bottom: 5px solid black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.o{
+    margin-bottom: 5px;
 }
+.o *{
+    margin-left: 10px;
+}
+
 .footer{
     width:700px;
     height: 100px;
