--- a/css/add_survey.css
+++ b/css/add_survey.css
@@ -10,22 +10,18 @@
 .top{
     width:700px;
     height: 60px;
-    border: 1px solid black;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
     display: flex;
     align-items: center;
     padding-left: 30px;
 }
 .content{
     width:700px;
-    padding: 20px 50px;
-    border: 1px solid black;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
 }
 .ques{
     margin-bottom: 10px;
+    padding: 20px 50px;
+    margin-bottom: 20px;
+    border-top: 1px solid black;
 }
 .q_t{
     width:600px;
