--- a/css/add_survey.css
+++ b/css/add_survey.css
@@ -12,7 +12,7 @@
     height: 60px;
     display: flex;
     align-items: center;
-    padding-left: 30px;
+    padding-left: 120px;
 }
 .content{
     width:700px;
@@ -21,7 +21,7 @@
     margin-bottom: 10px;
     padding: 20px 50px;
     margin-bottom: 20px;
-    border-top: 1px solid black;
+    border-top: 5px solid #9e9e9e;
 }
 .q_t{
     width:600px;
@@ -44,6 +44,13 @@
     margin-bottom: 5px;
 }
 .o *{
+    margin-left: 10px;
+}
+
+
+.empty{
+    opacity: 0;
+    color:red;
     margin-left: 10px;
 }
 
