--- a/css/add_survey.css
+++ b/css/add_survey.css
@@ -1,8 +1,17 @@
-
-.form{
+.form_box{
     width: 700px;
     height: 100%;
     margin: auto;
+    padding-top: 10px;
+}
+.form_header{
+    width: 700px;
+    height: 50px;
+    text-align: center;
+    font-size: 30px;
+    font-weight: bolder;
+}
+.form{
     display: flex;
     flex-wrap: wrap;
     align-content: flex-start;
