--- a/css/show_survey.css
+++ b/css/show_survey.css
@@ -13,8 +13,11 @@ table{
     font-weight: bolder;
 }
 td:nth-child(2){
-    width: 40%;
+    width: 35%;
 }
-td:nth-child(1),td:nth-child(3),td:nth-child(4),td:nth-child(5){
+td:nth-child(1){
+    width: 20%;
+}
+td:nth-child(3),td:nth-child(4),td:nth-child(5){
     width: 15%;
 }
