--- a/css/add_survey.css
+++ b/css/add_survey.css
@@ -1,3 +1,6 @@
+a:hover{
+    text-decoration: none;
+}
 .form_box{
     width: 700px;
     height: 100%;
@@ -66,7 +69,4 @@
 .footer{
     width:700px;
     height: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
