--- a/css/res_survey.css
+++ b/css/res_survey.css
@@ -1,5 +1,9 @@
+a:hover{
+    text-decoration: none;
+}
 .table_box{
     padding-top: 50px;
+    display:fixed;
 }
 table{
     width: 50%;
@@ -8,7 +12,12 @@ table{
 }
 th{
     width: 50%;
-    background-color: rgb(183, 184, 255);
+    height: 30px;
+    background-color: rgb(58, 58, 58);
+    color:rgb(229, 238, 240);
+}
+td{
+    padding: 3px;
 }
 tr{
     width: 50%;
@@ -16,4 +25,5 @@ tr{
 
 tr:hover{
     background-color: #d3e0ec;
+    cursor: pointer;
 }
