--- a/css/show_survey.css
+++ b/css/show_survey.css
@@ -1,36 +1,60 @@
-a:hover{
+.table_header a:hover {
     text-decoration: none;
+    box-shadow: 0 0px 10px rgba(0,0,0,0.3);
 }
-.table_box{
+
+.table_box {
     padding-top: 20px;
 }
-table{
-    width:60%; 
+
+table {
+    width: 60%;
     margin: auto;
-    text-align:center;
+    text-align: center;
 }
-.table_header{
-    font-size: 30px;
+
+.table_header {
+    width: 60%;
+    margin: auto;
     margin-bottom: 10px;
-    text-align:center;
-    font-weight: bolder;
+    text-align: center;
 }
-tr:nth-child(1) th{
+.table_header a{
+    display: inline-block;
+    float: right;
+    margin-right: 10px;
+    margin-top: 10px;
+    border-radius: 3px;
+    padding: 5px;
+}
+    
+h1 {
+    font-size: 30px;
+    font-weight: bolder;
+    display: inline-block;
+}
+
+tr:nth-child(1) th {
     padding: 5px;
     border-bottom: 2px solid rgb(48, 48, 54);
 }
-td{
+
+td {
     padding: 5px;
 }
-td:nth-child(2){
+
+td:nth-child(2) {
     width: 35%;
 }
-td:nth-child(1){
+
+td:nth-child(1) {
     width: 20%;
 }
-td:nth-child(3),td:nth-child(4),td:nth-child(5){
+
+td:nth-child(3), td:nth-child(4), td:nth-child(5) {
     width: 15%;
 }
-tr:NOT(:nth-child(1)):hover{
+
+tr:NOT(:nth-child(1)):hover {
     background-color: #e8f4ff;
 }
