--- a/css/home.css
+++ b/css/home.css
@@ -8,11 +8,30 @@ a:hover{
     text-decoration: none;
 }
 nav{
+    width: 100%;
     height: 60px;
     background-color: rgb(224, 229, 233);
 }
-.survey{
+.header{
+    width: 700px;
+    margin: auto;
+}
+.survey_box,.story_box{
+    width: 100px;
     height: 60px;
+    padding-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    display: inline-block;
+    font-size: 24px;
+    font-weight: bolder;
+    text-align: center;
+}
+.status_box{
+    width: 200px;
+    height: 60px;
+    display: flex;
+    float: right;
 }
 .page{
     width: 900px;
