--- a/css/res_survey.css
+++ b/css/res_survey.css
@@ -13,8 +13,10 @@ table{
 th{
     width: 50%;
     height: 30px;
-    background-color: rgb(58, 58, 58);
+}
+tr:nth-child(2){
     color:rgb(229, 238, 240);
+    background-color: rgb(58, 58, 58);
 }
 td{
     padding: 3px;
@@ -23,7 +25,7 @@ tr{
     width: 50%;
 }
 
-tr:hover{
+.tr:hover{
     background-color: #d3e0ec;
     cursor: pointer;
 }
