--- a/css/show_survey.css
+++ b/css/show_survey.css
@@ -44,14 +44,18 @@ td {
 }
 
 td:nth-child(2) {
-    width: 35%;
+    width: 40%;
+    overflow: hidden;
 }
 
 td:nth-child(1) {
-    width: 20%;
+    width: 25%;
 }
 
-td:nth-child(3), td:nth-child(4), td:nth-child(5) {
+td:nth-child(3), td:nth-child(5) {
+    width: 10%;
+}
+td:nth-child(4){
     width: 15%;
 }
 
