--- a/css/home.css
+++ b/css/home.css
@@ -48,7 +48,7 @@ nav{
 .ad{
     width: 200px;
     min-height:800px;
-    border: 1px solid black;
+    padding: 10px;
     display: flex;
     flex-direction: column;
 }
