--- a/css/add_survey.css
+++ b/css/add_survey.css
@@ -3,7 +3,7 @@ a:hover{
 }
 .form_box{
     width: 700px;
-    height: 100%;
+    min-height: 500px;
     margin: auto;
     padding-top: 10px;
 }
@@ -26,7 +26,7 @@ a:hover{
     align-items: center;
     padding-left: 120px;
 }
-.content{
+.add_page{
     width:700px;
 }
 .ques{
