廣告上架狀態管理

--- a/css/home.css
+++ b/css/home.css
@@ -57,7 +57,7 @@ footer{
     height: 100px;
     text-align: center;
     color:white;
-    background-color: black;
+    background-color: #5d5d5d;
 }
 .display_box{
     background-color: rgba(0,0 ,0,0.3);
