--- a/css/manage.css
+++ b/css/manage.css
@@ -4,8 +4,10 @@
     flex-wrap: wrap;
 }
 
-h1 {
+.manage_header{
     width: 100%;
+    font-size: 30px;
+    font-weight: bolder;
     text-align: center;
     margin-bottom: 30px;
 }
@@ -14,8 +16,9 @@ h1 {
     width: 340px;
     margin-right: 10px;
     height: 120px;
+    border-radius: 10px;
     padding: 10px;
-    background-color: pink;
+    background-color: rgb(240, 224, 226);
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 10px;
@@ -36,7 +39,6 @@ h1 {
     width: 230px;
     padding: 5px;
     margin-left: 10px;
-    border: 1px solid black;
     display: flex;
     flex-direction: column;
 }
@@ -72,4 +74,13 @@ h1 {
 }
 .st1{
     background-color: black;
+}
+
+table{
+    width: 450px;
+    margin: 10px auto;
+}
+td:nth-child(1){
+    width: 120px;
+    height: 50px;
 }
