--- a/css/res_survey.css
+++ b/css/res_survey.css
@@ -13,10 +13,12 @@ table{
 th{
     width: 50%;
     height: 30px;
-}
-tr:nth-child(2){
     color:rgb(229, 238, 240);
     background-color: rgb(58, 58, 58);
+}
+.h{
+    color:black;
+    background-color: white;
 }
 td{
     padding: 3px;
