--- a/css/home.css
+++ b/css/home.css
@@ -4,6 +4,9 @@
     padding: 0;
     font-family: 'Microsoft JhengHei';
 }
+body{
+    background-color: rgb(235, 235, 235);
+}
 a:hover{
     text-decoration: none;
 }
@@ -11,6 +14,7 @@ nav{
     width: 100%;
     height: 60px;
     background-color: rgb(224, 229, 233);
+    box-shadow: 0 0 10px rgba(0,0 ,0,0.3);
 }
 .header{
     width: 800px;
@@ -43,10 +47,13 @@ nav{
 
 .content{
     width: 700px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    background-color: white;
 }
 .aside{
     width: 200px;
-    min-height:700px;
+    min-height:500px;
     padding: 10px;
     display: flex;
     flex-direction: column;
