--- a/css/manage.css
+++ b/css/manage.css
@@ -14,11 +14,11 @@
 
 .manage_box {
     width: 340px;
-    margin-right: 10px;
+    margin-left: 7px;
     height: 120px;
     border-radius: 10px;
     padding: 10px;
-    background-color: rgb(240, 224, 226);
+    background-color: rgb(221, 221, 221);
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 10px;
