--- a/css/home.css
+++ b/css/home.css
@@ -13,13 +13,20 @@ a:hover{
 nav{
     width: 100%;
     height: 60px;
-    background-color: rgb(224, 229, 233);
     box-shadow: 0 0 10px rgba(0,0 ,0,0.3);
 }
+.survey_nav_bg{
+    background-color: rgb(224, 229, 233);
+}
+.story_nav_bg{
+    background-color: rgb(178, 215, 245);
+}
+
 .header{
-    width: 800px;
+    width: 1000px;
     margin: auto;
 }
+
 .survey_box,.story_box{
     width: 100px;
     height: 60px;
