--- a/css/manage.css
+++ b/css/manage.css
@@ -67,7 +67,7 @@
     font-weight: bolder;
     text-align: center;
     cursor: pointer;
-    
+    margin-right: 5px;
 }
 .st0{
     background-color: #eee;
