--- a/css/show_survey.css
+++ b/css/show_survey.css
@@ -1,31 +1,42 @@
 .table_header a:hover {
     text-decoration: none;
-    box-shadow: 0 0px 10px rgba(0,0,0,0.3);
+    box-shadow: 0 0 10px rgba(0,0,0,0.3);
+}
+.table_header a{
+    border:1px solid #b4b4b4;
+    padding: 5px 10px;
 }
 
 .table_box {
     padding-top: 20px;
 }
-
+.th:hover{
+    background-color: rgb(87, 87, 87);
+    transition: 0.3s;
+}
+.th:hover a{
+    color:white;
+}
+.order_active{
+    background-color: rgb(87, 87, 87);
+}
+.order_active a{
+    color:white;
+}
 table {
-    width: 60%;
+    width: 80%;
     margin: auto;
     text-align: center;
 }
 
 .table_header {
-    width: 60%;
+    width: 90%;
+    height: 40px;
     margin: auto;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     text-align: center;
 }
 .table_header a{
-    display: inline-block;
-    float: right;
-    margin-right: 10px;
-    margin-top: 10px;
-    border-radius: 3px;
-    padding: 5px;
 }
     
 h1 {
