--- a/css/show_survey.css
+++ b/css/show_survey.css
@@ -36,8 +36,6 @@ table {
     margin-bottom: 20px;
     text-align: center;
 }
-.table_header a{
-}
     
 h1 {
     font-size: 30px;
@@ -50,24 +48,44 @@ tr:nth-child(1) th {
     border-bottom: 2px solid rgb(48, 48, 54);
 }
 
-td {
+th:nth-child(2) {
+    width: 26%;
+}
+
+th:nth-child(1) {
+    width: 20%;
+}
+
+th:nth-child(3),th:nth-child(5),th:nth-child(6){
+    width: 13%;
+}
+th:nth-child(4){
+    width: 15%;
+}
+
+
+
+
+td{
     padding: 5px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 td:nth-child(2) {
-    width: 35%;
-    overflow: hidden;
+    width: 27%;
 }
 
 td:nth-child(1) {
-    width: 25%;
+    width: 20%;
 }
 
-td:nth-child(5) {
-    width: 10%;
+td:nth-child(3),td:nth-child(5),td:nth-child(6){
+    max-width: 70px;
+    overflow: hidden;
 }
-td:nth-child(3), td:nth-child(4){
-    width: 15%;
+td:nth-child(4){
+    max-width: 70px;
 }
 
 tr:NOT(:nth-child(1)):hover {
