--- a/css/manage.css
+++ b/css/manage.css
@@ -11,7 +11,16 @@
     text-align: center;
     margin-bottom: 30px;
 }
-
+.ad_column{
+    width: 350px;
+}
+.column_header{
+    width: 350px;
+    height: 30px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bolder;
+}
 .manage_box {
     width: 340px;
     margin-left: 7px;
